# MalpkaBot

./: .gitignore  .replit  db.json  handle_database.py  initialize_database.py  main.py  package-lock.json  pyproject.toml  pyproject.toml.backup
