[tool.poetry]
name = "MalpkaBot"
version = "0.2.0"
description = ""
authors = ["Malpkakefirek"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
python-dotenv = "^0.15.0"
chart = "^0.2.3"
py-cord = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
